<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_bg"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="28dp"
        android:text="@string/dialog_no_internet_title"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textAlignment="center"
        android:textStyle="bold" />

    <TextView
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/dialog_no_internet_message"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textAlignment="center" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:padding="8dp">

        <Button
            android:textColor="#ffffff"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:id="@+id/btnConfirmNoInternet"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/dialog_no_internet_btn_confirm"
            style="@style/Widget.MaterialComponents.Button"/>

    </LinearLayout>


</LinearLayout>