<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="vn.poly.quiz.activities.OneTimeActivity"
    android:orientation="vertical"
    android:gravity="center">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/onetime_text_view_title"
        android:textStyle="bold"
        android:textSize="28sp"
        android:layout_marginBottom="20dp"/>

    <FrameLayout
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="10dp"
        android:layout_gravity="center">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/ivAvatar"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/avatar_holder"/>

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/ivEditAvatar"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:src="@drawable/ic_camera_orange"
            android:layout_gravity="bottom|end"/>

    </FrameLayout>

    <androidx.cardview.widget.CardView
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/onetime_text_view_welcome"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <TextView
                android:layout_marginTop="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/onetime_text_view_input_display_name"
                android:textSize="16sp"
                android:textAlignment="center"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edName"
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/onetime_hint_display_name"/>

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:layout_marginTop="16dp"
                android:id="@+id/btnStart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/onetime_button_start"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>