<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context="vn.poly.quiz.activities.EditActivity"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="16dp">

        <TextView
            android:layout_marginBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/edit_textView_title"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold"/>

        <FrameLayout
            android:layout_marginBottom="20dp"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="10dp"
            android:layout_gravity="center">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/ivAvatar"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@drawable/avatar_holder"/>

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/ivEditAvatar"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:src="@drawable/ic_camera_orange"
                android:layout_gravity="bottom|end"/>

        </FrameLayout>

        <TextView
            android:id="@+id/tvUsernameEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="30dp"
            android:text="@string/edit_hint_username"
            android:textSize="20sp"
            android:textStyle="italic" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edDisplayName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:textColorHint="#232323">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/edit_hint_displayName"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edPasswordEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:textColorHint="#232323">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/edit_hint_password"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginBottom="30dp"
            android:id="@+id/edRePasswordEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:textColorHint="#232323">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/edit_hint_new_password"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:layout_marginBottom="20dp"
            android:id="@+id/btnSuaThongTin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/edit_button_change" />

    </LinearLayout>



</ScrollView>