<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dialog_bg"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="16dp"
        android:text="@string/dialog_choose_pic_text_view_title"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp">

        <Button
            android:layout_weight="0.5"
            android:textColor="#ffffff"
            android:layout_gravity="center"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:id="@+id/btnGallery"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/dialog_choose_pic_button_album"
            style="@style/Widget.MaterialComponents.Button"/>

        <Button
            android:layout_marginStart="16dp"
            android:layout_weight="0.5"
            android:textColor="#ffffff"
            android:layout_gravity="center"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:id="@+id/btnCamera"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/dialog_choose_pic_button_camera"
            style="@style/Widget.MaterialComponents.Button"/>

    </LinearLayout>


</LinearLayout>