<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="vn.poly.quiz.activities.SettingActivity"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp">

    <LinearLayout
        android:layout_marginTop="100dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center|top">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <TextView
                android:layout_weight="0.3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/setting_text_view_switch_sound"
                android:textStyle="bold"
                android:textSize="18sp"/>

            <androidx.appcompat.widget.SwitchCompat
                android:layout_weight="0.7"
                android:id="@+id/switchSound"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <TextView
                android:layout_weight="0.3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/setting_text_view_switch_background_music"
                android:textStyle="bold"
                android:textSize="18sp" />

            <androidx.appcompat.widget.SwitchCompat
                android:layout_weight="0.7"
                android:id="@+id/switchBackGroundMusic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>

    </LinearLayout>
    
    <Button
        android:id="@+id/btnSettingBack"
        android:layout_margin="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/setting_button_back"/>

</LinearLayout>