<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="vn.poly.quiz.activities.MenuActivity"
    android:gravity="center|top">

    <androidx.cardview.widget.CardView
        android:id="@+id/cvLayoutTop"
        android:layout_marginTop="40dp"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:elevation="16dp"
        app:cardCornerRadius="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg_player_info"
            android:orientation="horizontal"
            android:gravity="center">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/ivAvatar"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/avatar_holder"/>

            <LinearLayout
                android:layout_width="160dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">

                <TextView
                    android:id="@+id/tvDisplayNameMenu"
                    android:layout_width="110dp"
                    android:layout_height="20dp"
                    android:text="@string/menu_text_view_display_name"
                    android:textSize="16sp"
                    android:textColor="@color/white"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_marginTop="10dp"
                    android:id="@+id/tvUsernameLogin"
                    android:layout_width="110dp"
                    android:layout_height="20dp"
                    android:text="@string/menu_text_view_username"
                    android:textSize="12sp"
                    android:textColor="@color/white"
                    android:textStyle="italic"/>

            </LinearLayout>

            <ImageView
                android:id="@+id/ivLogout"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/ic_logout"
                android:background="@drawable/border_icon"
                android:padding="8dp"
                android:alpha="0.6"
                android:contentDescription="@string/desc" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <ImageView
        android:id="@+id/ivLogoText"
        android:layout_below="@+id/cvLayoutTop"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:src="@drawable/logo_text"
        android:layout_marginTop="70dp"
        android:onClick="toResult"
        android:contentDescription="@string/desc" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewPlay"
        android:layout_below="@id/ivLogoText"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="60dp"
        android:elevation="8dp"
        app:cardCornerRadius="10dp"
        android:soundEffectsEnabled="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@drawable/bg_play"
            android:gravity="center">

            <ImageView
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:src="@drawable/ic_play"
                android:contentDescription="@string/desc" />

            <TextView
                android:layout_marginTop="20dp"
                android:layout_width="60dp"
                android:layout_height="20dp"
                android:text="@string/menu_text_view_start"
                android:textAlignment="center"
                android:textColor="#006517"
                android:textSize="16sp"
                android:textStyle="bold"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewLeaderBoard"
        android:layout_below="@+id/ivLogoText"
        android:layout_toEndOf="@+id/cardViewPlay"
        android:layout_width="140dp"
        android:layout_height="170dp"
        android:layout_marginTop="60dp"
        android:layout_marginStart="5dp"
        android:elevation="8dp"
        app:cardCornerRadius="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg_leader_board"
            android:orientation="vertical"
            android:gravity="center">

            <ImageView
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:src="@drawable/ic_trophy"
                android:contentDescription="@string/desc" />

            <TextView
                android:layout_marginTop="20dp"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:text="@string/menu_text_view_leader_board"
                android:textColor="#715B00"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textAlignment="center"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewSettings"
        android:layout_below="@+id/cardViewPlay"
        android:layout_width="110dp"
        android:layout_height="150dp"
        android:layout_marginTop="8dp"
        android:elevation="8dp"
        app:cardCornerRadius="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg_settings"
            android:orientation="vertical"
            android:gravity="center">

            <ImageView
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:src="@drawable/ic_settings"
                android:contentDescription="@string/desc" />

            <TextView
                android:layout_marginTop="20dp"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:text="@string/menu_text_view_setting"
                android:textColor="#5F2501"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textAlignment="center"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewStatistics"
        android:layout_below="@+id/cardViewLeaderBoard"
        android:layout_toEndOf="@+id/cardViewSettings"
        android:layout_width="180dp"
        android:layout_height="130dp"
        android:layout_marginTop="8dp"
        android:layout_marginStart="5dp"
        android:elevation="8dp"
        app:cardCornerRadius="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg_statistics"
            android:orientation="vertical"
            android:gravity="center">

            <ImageView
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:src="@drawable/ic_pie_chart"
                android:contentDescription="@string/desc" />

            <TextView
                android:layout_marginTop="20dp"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:text="@string/menu_text_view_statistic"
                android:textColor="#006774"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textAlignment="center"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>